--- a/1060.md
+++ b/1060.md
@@ -4,3 +4,28 @@
 http://t.csdnimg.cn/E9kZH
 
 2.安装nvidia container toolkits
+
+3.git clone https://github.com/nota-github/AIC2024_Track1_Nota.git
+最终目录:/home/xcb/AIC2024_Track1_Nota
+把数据集下载到/home/xcb/AIC2024_Track1_Nota/data/videos/val/scene_041
+我的数据集只下载了val 041这个场景做测试
+创建容器:
+```bash
+# Build a docker image
+docker build -t aic2024/track1_nota:latest .
+
+# Build a docker container
+#注意,这里/home/xcb/AIC2024_Track1_Nota是你刚才git clone的目录
+docker run -it --gpus all --shm-size=8g \
+-v /home/xcb/AIC2024_Track1_Nota:/home/workspace/AIC2024_Track1_Nota \
+-v /home/xcb/AIC2024_Track1_Nota/data:/workspace/ \
+aic2024/track1_nota:latest /bin/bash
+```
+
+5.conda install ffmpeg
+
+从容器里 
+```bash
+cd AIC2024_Track1_Nota/
+bash scripts/generate_only_frames.sh 
+```
