--- a/1060.md
+++ b/1060.md
@@ -24,8 +24,11 @@ aic2024/track1_nota:latest /bin/bash
 
 5.conda install ffmpeg
 
+6.提取图片
+
 从容器里 
 ```bash
 cd AIC2024_Track1_Nota/
 bash scripts/generate_only_frames.sh 
 ```
+7.下载它的模型:
