--- a/1060.md
+++ b/1060.md
@@ -25,6 +25,8 @@ aic2024/track1_nota:latest /bin/bash
 5.conda install ffmpeg
 
 6.提取图片
+bash scripts/generate_only_frames.sh
+
 
 从容器里 
 ```bash
@@ -32,3 +34,7 @@ cd AIC2024_Track1_Nota/
 bash scripts/generate_only_frames.sh 
 ```
 7.下载它的模型:
+存到./pretrained里
+
+8.运行
+bash scripts/run_mcpt.sh
