--- a/1060.md
+++ b/1060.md
@@ -16,7 +16,7 @@ docker build -t aic2024/track1_nota:latest .
 
 # Build a docker container
 #注意,这里/home/xcb/AIC2024_Track1_Nota是你刚才git clone的目录
-docker run -it --gpus all --shm-size=8g \
+sudo docker run -it --gpus all --shm-size=8g \
 -v /home/xcb/AIC2024_Track1_Nota:/home/workspace/AIC2024_Track1_Nota \
 -v /home/xcb/AIC2024_Track1_Nota/data:/workspace/ \
 aic2024/track1_nota:latest /bin/bash
