--- a/1060.md
+++ b/1060.md
@@ -36,5 +36,30 @@ bash scripts/generate_only_frames.sh
 7.下载它的模型:
 存到./pretrained里
 
-8.运行
+8.修改aicity24_eval_track1/scene_name_2_cam_id_validation copy.json
+只保留测试的那个场景41
+
+9.运行
 bash scripts/run_mcpt.sh
+
+测试scene_041的结果如下:
+```bash
+HOTA: data-pedestrian              HOTA      DetA      AssA      DetRe     DetPr     AssRe     AssPr     LocA      OWTA      HOTA(0)   LocA(0)   HOTALocA(0)
+scene_041                          66.916    73.576    60.875    78.222    87.736    65.934    79.705    89.812    68.99     76.785    87.87     67.471    
+
+Count: data-pedestrian             Dets      GT_Dets   IDs       GT_IDs    
+scene_041                          553353    620653    60        28        
+
+Final scores for all sequences:
++----------+-------------+
+| Metric   | Value (%)   |
++==========+=============+
+| HOTA     | 66.916%     |
++----------+-------------+
+| DetA     | 73.576%     |
++----------+-------------+
+| AssA     | 60.875%     |
++----------+-------------+
+| LocA     | 89.812%     |
++----------+-------------+
+```
